# iii

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  NEWS.xml  NEWS.xsl  autogen.bash  autogen.sh  configure.ac
aux/: Dockerfile.testbuild.focal
debian/: changelog  control  copyright  examples  iii.dirs  iii.init  iii.postinst  rules
doc/: .gitignore  000000000000.conf  Makefile.am  iii-extract-riff-chunk.1  iiid.8.in  on-upload-photo.bash  tag-photo.bash
scripts/: xml2sh.xsl
src/: .gitignore  Makefile.am  eyefi.h  eyefiservice.cc  eyefiworker.cc  eyefiworker.h  eyekinfig.cc  eyekinfig.h  eyetil.cc  eyetil.h  iii-extract-riff-chunk.cc  iiid.cc  iiidb.h  seclude.h
